<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DestructionTD</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
<string name="tower_life">Tower HP:</string>
<string name="enemy_count">Enemy Count:</string>
<string name="score_text">Score:</string>
<string name="tower_life_value">100</string>
<string name="enemy_count_value">1000</string>
<string name="score_text_value">1000</string>
<string name="game_over">Game Over</string>
<string name="game_over_description">Thank You for Playing!</string>
<string name="game_over_score">Your Score:</string>
<string name="game_over_score_value">""</string>
<string name="back_button">"Back"</string>
</resources>
